# plutofilter

./: CMakeLists.txt  LICENSE  README.md  meson.build  plutofilter.h
.github/: FUNDING.yml
.github/workflows/: main.yml
examples/: arithmetic.c  blend.c  blur.c  brightness.c  composite.c  contrast.c  example.c  example.h  grayscale.c  hue-rotate.c  invert.c  meson.build  opacity.c  saturate.c  sepia.c
